--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Interface to GitLab API",
   "main": "lib/gitlab.js",
   "scripts": {
-    "test": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --recursive -R spec test"
+    "test": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --recursive -R spec test",
+    "test-basic": "node_modules/.bin/_mocha -R spec test/01-basic",
+    "test-projects": "node_modules/.bin/_mocha -R spec test/02-projects",
+    "test-groups": "node_modules/.bin/_mocha -R spec test/03-groups",
+    "test-users": "node_modules/.bin/_mocha -R spec test/04-users"
   },
   "repository": {
     "type": "git",
