--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "should-promised": "^0.2.0"
   },
   "dependencies": {
+    "parse-link-header": "^0.2.0",
     "password-maker": "^1.0.5",
     "promise": "^6.1.0",
     "request": "^2.55.0"
